--- a/beispiele/motor-fe/package.json
+++ b/beispiele/motor-fe/package.json
@@ -18,6 +18,7 @@
     "koa-static-cache": "^3.1.7",
     "koa.io": "0.0.3",
     "socket.io": "^1.7.1",
-    "pigpio": "^0.4.0"
+    "pigpio": "^0.4.0",
+    "power-off": "1.1.1"
   }
 }
