--- a/beispiele/motor-fe/package.json
+++ b/beispiele/motor-fe/package.json
@@ -18,8 +18,8 @@
     "koa-compress": "^1.0.9",
     "koa-static-cache": "^3.1.7",
     "koa.io": "0.0.3",
-    "socket.io": "^1.7.1",
     "pigpio": "^0.4.0",
-    "power-off": "1.1.1"
+    "power-off": "1.1.1",
+    "socket.io": "^1.7.1"
   }
 }
