--- a/beispiele/motor-fe/package.json
+++ b/beispiele/motor-fe/package.json
@@ -20,6 +20,7 @@
     "koa.io": "0.0.3",
     "pigpio": "^0.4.0",
     "power-off": "1.1.1",
-    "socket.io": "^1.7.1"
+    "socket.io": "^1.7.1",
+    "gyronorm":"2.0.4"
   }
 }
