--- a/beispiele/motor-fe/package.json
+++ b/beispiele/motor-fe/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "oldpi": "node app.js oldpi"
+    "oldpi": "node app.js oldpi",
+    "stub": "node app.js stub"
   },
   "author": "MH",
   "license": "ISC",
